--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
-        
+        <header class="header">
+           <h1> teste ...</h1>
+        </header>
         
     </body>
 </html>
