--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     </head>
     <body>
         <header class="header">
-           <h1> teste ...</h1>
+           <div class="logo-box">
+            <img src="img/logo-white.png" alt="Natours of logo" class="logo">
+           </div>
         </header>
         
     </body>
