--- a/index.html
+++ b/index.html
@@ -24,15 +24,27 @@
           class="header__logo"
         />
       </div>
-
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Outdoors</span>
           <span class="heading-primary--sub">is where life happens</span>
         </h1>
-
         <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people.
+          </h2>
+        </div>
+
+        <div>
+          <div>Text is here</div>
+          <div>Image is here</div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
