--- a/index.html
+++ b/index.html
@@ -34,14 +34,34 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people.
           </h2>
         </div>
 
         <div class="row">
-          <div class="col-1-of-2">Text is here</div>
+          <div class="col-1-of-2">
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              You're going to fall in love with nature.
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              dolorem qui, inventore alias excepturi culpa esse nihil porro quod
+              optio nobis provident quos nisi doloribus, consequatur aliquid
+              quam fuga. Quo.
+            </p>
+
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Live adventures like you never have before.
+            </h3>
+            <p class="paragraph">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
+              dolorem qui, inventore alias excepturi culpa esse nihil porro quod
+              optio nobis provident quos nisi doloribus, consequatur aliquid
+              quam fuga. Quo.
+            </p>
+          </div>
           <div class="col-1-of-2">Image is here</div>
         </div>
       </section>
@@ -49,64 +69,64 @@
     <!--
     <section class="grid-test">
         <div class="row">
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
-            <div class="col-1-of-2">
-                Col 1 of 2
-            </div>
+          <div class="col-1-of-2">
+              Col 1 of 2
+          </div>
+          <div class="col-1-of-2">
+              Col 1 of 2
+          </div>
         </div>
         <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
+          <div class="col-1-of-3">
+              Col 1 of 3
+          </div>
+          <div class="col-1-of-3">
+              Col 1 of 3
+          </div>
+          <div class="col-1-of-3">
+              Col 1 of 3
+          </div>
         </div>
         <div class="row">
-            <div class="col-1-of-3">
-                Col 1 of 3
-            </div>
-            <div class="col-2-of-3">
-                Col 2 of 3
-            </div>
+          <div class="col-1-of-3">
+              Col 1 of 3
+          </div>
+          <div class="col-2-of-3">
+              Col 2 of 3
+          </div>
         </div>
         <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
         </div>
         <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-2-of-4">
-                Col 2 of 4
-            </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-2-of-4">
+              Col 2 of 4
+          </div>
         </div>
         <div class="row">
-            <div class="col-1-of-4">
-                Col 1 of 4
-            </div>
-            <div class="col-3-of-4">
-                Col 3 of 4
-            </div>
+          <div class="col-1-of-4">
+              Col 1 of 4
+          </div>
+          <div class="col-3-of-4">
+              Col 3 of 4
+          </div>
         </div>
     </section>
     -->
