feat - add button-text

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
             </h3>
             <p class="paragraph">
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              dolorem qui, inventore alias excepturi culpa esse nihil porro quod
-              optio nobis provident quos nisi doloribus, consequatur aliquid
-              quam fuga. Quo.
+              dolorem qui.
             </p>
+
+            <a href="#" class="btn-text">Learn more &rarr;</a>
           </div>
           <div class="col-1-of-2">Image is here</div>
         </div>
