--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
+
         <div class="row">
           <div class="story">
             <figure class="story__shape">
@@ -252,6 +253,7 @@
                 alt="Person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -266,6 +268,35 @@
               </p>
             </div>
           </div>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                WOW! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi
+                pariatur dicta corrupti, dolores eligendi numquam, veniam
+                nostrum in praesentium voluptates. Dolores eligendi numquam,
+                veniam nostrum in praesentium voluptates. Dolores eligendi
+                numquam, veniam nostrum in praesentium voluptates.
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
