--- a/index.html
+++ b/index.html
@@ -447,7 +447,31 @@
     </footer>
 
     <div class="popup">
-      <div class="popup__content">POPUP</div>
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere,
+            molestiae. Blanditiis consequatur esse neque tenetur ipsum nesciunt
+            similique ullam temporibus aperiam assumenda sit optio mollitia qui,
+            nemo architecto distinctio voluptatum. Lorem ipsum dolor sit amet
+            consectetur, adipisicing elit. Facere, molestiae. Facere, molestiae.
+            Blanditiis consequatur esse neque tenetur ipsum nesciunt similique
+            ullam temporibus aperiam assumenda sit optio mollitia qui, nemo
+            architecto distinctio voluptatum.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
     </div>
     <!--
     <section class="grid-test">
