--- a/index.html
+++ b/index.html
@@ -97,17 +97,25 @@
           <div class="col-1-of-2">
             <div class="composition">
               <img
-                src="img/nat-1-large.jpg"
-                alt="photo 1"
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 1"
                 class="composition__photo composition__photo--p1"
-              /><img
-                src="img/nat-2-large.jpg"
-                alt="photo 2"
+                src="img/nat-1-large.jpg"
+              />
+              <img
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 2"
                 class="composition__photo composition__photo--p2"
-              /><img
-                src="img/nat-3-large.jpg"
-                alt="photo 3"
+                src="img/nat-2-large.jpg"
+              />
+              <img
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw, 300px"
+                alt="Photo 3"
                 class="composition__photo composition__photo--p3"
+                src="img/nat-3-large.jpg"
               />
             </div>
           </div>
@@ -420,6 +428,7 @@
           <img
             srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x"
             alt="Full logo"
+            src="img/logo-green-2x.png"
           />
         </picture>
       </div>
@@ -448,8 +457,7 @@
         <div class="col-1-of-2">
           <p class="footer__copyright">
             Built my
-            <a href="#" class="footer__link">Gilberto Espinoso</a> for his
-            online course
+            <a href="#" class="footer__link">NATOURS</a> for his online course
             <a href="#" class="footer__link"> Advanced CSS and Sass </a>.
             Copyright &copy; by Gilberto Espinoso. You are 100% allowed to use
             this webpage for both personal and commercial use, but NOT to claim
